--- a/.gitignore
+++ b/.gitignore
@@ -96,4 +96,9 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+test.jpg
+test1.jpg
+test2.jpg
+test3.jpg
+test.php
 
